// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`image search parse matches snapshots from fixture data: 01-puppies.html 1`] = `
Array [
  "https://cdn3-www.dogtime.com/assets/uploads/2018/10/puppies-cover.jpg",
  "https://d17fnq9dkz9hgj.cloudfront.net/uploads/2018/01/shutterstock_587562362.jpg",
  "https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2017/11/12193133/German-Shepherd-Puppy-Fetch.jpg",
  "https://i.ytimg.com/vi/8sUOvDzmrks/hqdefault.jpg",
  "https://thehappypuppysite.com/wp-content/uploads/2018/04/when-can-puppies-go-outside-header.jpg",
  "https://www.thesprucepets.com/thmb/1ewT7VnLRP_60_xr6T1bhGhNb3I\\\\u003d/960x0/filters:no_upscale():max_bytes(150000):strip_icc()/puppies-sharing-an-ice-cream-cone-991329222-5b9ae36a46e0fb0025d890b1.jpg",
  "https://cdn1-www.dogtime.com/assets/uploads/2011/03/puppy-development.jpg",
  "https://media.mnn.com/assets/images/2018/05/puppies_dog_bed.jpg.653x0_q80_crop-smart.jpg",
  "https://images2.minutemediacdn.com/image/upload/c_crop,h_2276,w_4043,x_0,y_23/f_auto,q_auto,w_1100/v1553128862/shape/mentalfloss/536413-istock-459987119.jpg",
  "https://9ed48207422fa7fc5013-a6297eb5ec0f30e883355c8680f3b2d6.ssl.cf2.rackcdn.com/35585131450_6-20190322154216-20190322154226-1000x1000.jpg",
  "https://www.readersdigest.ca/wp-content/uploads/sites/14/2013/03/6-facts-to-know-before-owning-a-puppy.jpg",
  "https://pbs.twimg.com/profile_images/446566229210181632/2IeTff-V.jpeg",
  "https://www.rover.com/blog/wp-content/uploads/2019/01/newborn-puppy-960x540.jpg",
  "https://www.hillspet.com/content/dam/cp-sites/hills/hills-pet/en_us/exported/dog-care/new-pet-parent/images/golden-retriever-puppy-running-outside.jpg",
  "https://static.boredpanda.com/blog/wp-content/uploads/2018/10/cutest-puppy-dog-pictures-coverimage.jpg",
  "https://www.dogster.com/wp-content/uploads/2018/10/golden-eating-toy.jpg",
  "https://i.ytimg.com/vi/a6KGPBflhiM/hqdefault.jpg",
  "https://cnet3.cbsistatic.com/img/ohFVKbBLLqcIrGP0R2IGyNkYuj8\\\\u003d/1092x0/2019/11/13/c1065c14-5477-4ddf-8352-63d48d21b442/narwhal.jpg",
  "https://www.thelabradorsite.com/wp-content/uploads/2019/04/When-Do-Puppies-Stop-Biting-And-How-To-Cope-With-A-Teething-Lab-Puppy-LS-long.jpg",
  "https://www.gannett-cdn.com/presto/2019/12/18/USAT/5c51582a-64cb-4079-8584-b7bdf9dae701-GettyImages-1130714351.jpg",
  "https://blog.malwarebytes.com/wp-content/uploads/2017/11/shutterstock_688527661-900x506.jpg",
  "https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2018/05/22224952/beagle-puppy-in-large-cushion-chair.jpg",
  "https://petfocus.ca/clayton-park/wp-content/uploads/sites/41/2019/02/Puppies-Puppies-Oh-My-Photo-2-by-Barbara-Duggan-Smith-Veterinary-Assistant.jpg",
  "https://www.petmd.com/sites/default/files/petmd-shaking-puppy.jpg",
  "https://media.mnn.com/assets/images/2018/10/DqM7GXEU8AATAKL.jpg.1440x960_q100_crop-scale_upscale.jpg",
  "https://spca.bc.ca/wp-content/uploads/DSC7970-e1568922693978-825x419.jpg",
  "https://www.cbc.ca/kidscbc2/content/the_feed//puppies-HEADER-compressor.jpg",
  "https://cdn2-www.dogtime.com/assets/uploads/gallery/30-impossibly-cute-puppies/impossibly-cute-puppy-2.jpg",
  "https://ovc.uoguelph.ca/sites/default/files/users/k.mantel/images/iStock-467825446%20cute%20labador%20puppy%202.jpg",
  "http://trupanion.com/blog/wp-content/uploads/2019/08/PuppySocializationChecklist-1024x683.jpg",
  "https://www.citynews1130.com/wp-content/blogs.dir/sites/9/2019/12/27/puppies-3.jpg",
  "https://cdn.cnn.com/cnnnext/dam/assets/191204034536-puppies-rescued-2-large-169.jpg",
  "https://d17fnq9dkz9hgj.cloudfront.net/uploads/2018/05/Shelter_puppy_01.jpg",
  "https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2016/07/15155435/Pug-puppies.464864288-1.jpg",
  "https://moderndogmagazine.com/sites/default/files/images/articles/top_images/Training-Header_0.jpg",
  "https://pupbox.com/wp-content/themes/pupbox-jb/assets/blog.v2/posts-by-age/puppy-running2.jpg",
  "https://i.ytimg.com/vi/_w4x6fMCbpI/maxresdefault.jpg",
  "https://www.thesprucepets.com/thmb/hFjCVqkD8zCqJwo5nnoOhW0pWPs\\\\u003d/960x0/filters:no_upscale():max_bytes(150000):strip_icc()/two-puppies-playing-in-garden-83315112-5accabf7875db90036766acf.jpg",
  "https://www.hillspet.com/content/dam/cp-sites/hills/hills-pet/en_us/exported/dog-care/new-pet-parent/images/longhair-dachshund-puppy-outside.jpg",
  "http://r.ddmcdn.com/s_f/o_1/APL/uploads/2014/10/how-much-exercise-do-puppies-need-2-324x205.jpg",
  "https://www.caninefitness.com/images/rottweiler-puppies.jpg",
  "https://ewscripps.brightspotcdn.com/dims4/default/a1b2a27/2147483647/strip/true/crop/1280x720+0+0/resize/1280x720!/quality/90/?url\\\\u003dhttps%3A%2F%2Fewscripps.brightspotcdn.com%2F61%2F94%2Fffffd18a41e5ab51b0bce265f6a3%2Fposter-6.jpg",
  "https://i.pinimg.com/originals/e5/d7/e0/e5d7e0dd5dc3b5925b4f59438e1a4dca.jpg",
  "https://media4.s-nbcnews.com/i/newscms/2018_20/1339472/puppy-cute-today-180515-tease_48dc61b6a51fd4e847b6cc01abba9a1d.jpg",
  "http://www.sportdogtrainingcenter.com/wp-content/uploads/2018/01/dog-2910968_1920-1024x682.jpg",
  "https://www.ctvnews.ca/polopoly_fs/1.4734947.1576677009!/httpImage/image.jpg_gen/derivatives/landscape_960/image.jpg",
  "https://www.vernonmorningstar.com/wp-content/uploads/2018/09/13555856_web1_180919-VNE-VictoriaHumanePuppies.jpg",
  "https://imagesvc.meredithcorp.io/v3/mm/image?url\\\\u003dhttps%3A%2F%2Fpeopledotcom.files.wordpress.com%2F2017%2F03%2Fmost-popular-puppies-6.jpg",
  "https://www.petmd.com/sites/default/files/petmd-newborn-puppies-8.jpg",
  "https://upload.wikimedia.org/wikipedia/commons/6/6e/Golde33443.jpg",
  "https://thumbs-prod.si-cdn.com/rF53em_ivV_-Ek60AOq0bNV1YzM\\\\u003d/420x240/filters:focal(1501x569:1502x570)/https://public-media.si-cdn.com/filer/1e/1e/1e1e3aea-e930-45d2-9bc4-6dd50cccf66d/istock-511313058.jpg",
  "https://3wq24a3fnmyg4dtk8q2jysx2-wpengine.netdna-ssl.com/wp-content/uploads/2019/08/18170256_web1_190819-VNE-VHS2.jpg",
  "https://getapuppy.ca/wp-content/uploads/2019/11/506601-352x352.jpg",
  "https://images.dailyhive.com/20191227161228/22.jpg",
  "https://ichef.bbci.co.uk/news/410/cpsprodpb/3A7C/production/_106927941_pa-6355447.jpg",
  "https://www.aprilsaulnier.com/images/easyblog_articles/33/tiny-puppies-in-a-basket.jpg",
  "https://www.readersdigest.ca/wp-content/uploads/sites/14/2013/03/owning-a-puppy-means-more-patience.jpg",
  "https://cdn.kinsights.com/cache/2a/81/2a810b442c2bc11ed3dcdf6afa7e2500.jpg",
  "https://assets3.thrillist.com/v1/image/2811970/size/tmg-article_tall;jpeg_quality\\\\u003d20.jpg",
  "https://www.journalpioneer.com/media/photologue/photos/cache/PE-17122019-Husky_puppy_large.jpg",
  "http://www.cochranehumane.ca/wp-content/uploads/2020/01/puppy-play-group_jan2019-768x582.jpg",
  "https://images.thestar.com/jJ5c-746a09cTMo9n8SoaikwQc4\\\\u003d/1086x652/smart/filters:cb(1576362686744)/https://www.thestar.com/content/dam/thestar/news/ontario/2019/12/14/police-investigating-after-19-puppies-stolen-from-a-barn-near-guelph-ont/puppies_ho.jpg",
  "https://i.cbc.ca/1.5247634.1565831812!/fileImage/httpImage/image.jpg_gen/derivatives/16x9_780/fairford-puppy-1.jpg",
  "https://petlandcarmel.com/wp-content/themes/cosmick-petland-global/images/cta1-1.jpg",
  "https://www.columbiavalleypioneer.com/wp-content/uploads/2018/03/11078857_web1_180319-BPD-M-11_YVR_Puppies_20181.jpg",
  "https://static.boredpanda.com/blog/wp-content/uploads/2019/12/dogs-nap-time-puppy-spring-daycare-center-coverimage.jpg",
  "https://puppyintraining.com/wp-content/uploads/2016/11/golden-retriever-litter-size1.jpg",
  "https://www.dogfoodadvisor.com/wp-content/uploads/2018/06/small-breed-puppy-470.jpg",
  "http://www.yvr.ca/-/media/yvr/blog/2018/57_yvr_puppies_2018.jpg",
  "https://images.contentful.com/sv9mtllmoeui/5Ecs61hwmQIOa8sUgcWMKA/a5fa9799cbc6ce8c3a3cd335fccf4c25/blog_05.jpg",
  "http://cdn.akc.org/content/hero/cute_puppies_hero.jpg",
  "https://www.vernonmorningstar.com/wp-content/uploads/2019/06/17219549_web1_news-abandoned-puppies-quesnel.jpg",
  "https://static.timesofisrael.com/www/uploads/2020/01/ENr62bBUwAIj-Kd-e1578416735446.jpg",
  "https://www.dogster.com/wp-content/uploads/2017/08/A-happy-puppy-lying-in-the-grass-outside.jpg",
  "https://vetstreet-brightspot.s3.amazonaws.com/55/77/a059e49243609b3d7cf69a45a302/puppy-thinkstock-173329848-335sm71913.jpg",
  "https://cdn.arstechnica.net/wp-content/uploads/2018/09/GettyImages-95572844-800x608.jpg",
]
`;

exports[`image search parse matches snapshots from fixture data: 02-puppy.html 1`] = `
Array [
  "https://cdn3-www.dogtime.com/assets/uploads/2018/10/puppies-cover.jpg",
  "https://i.ytimg.com/vi/AZ2ZPmEfjvU/maxresdefault.jpg",
  "https://www.thesprucepets.com/thmb/lS8_qgfJ-9WYm9gKUzrKj27zxAE=/4427x2490/smart/filters:no_upscale()/portrait-of-a-terrier-puppy-dog-771456683-5b9adade4cedfd005049c4af.jpg",
  "https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2018/05/22224952/beagle-puppy-in-large-cushion-chair.jpg",
  "https://www.petmd.com/sites/default/files/petmd-puppy-weight.jpg",
  "https://cdn.aarp.net/content/dam/aarp/money/scams_fraud/2019/12/1140-puppy-sad.jpg",
  "https://d17fnq9dkz9hgj.cloudfront.net/uploads/2018/01/shutterstock_587562362.jpg",
  "https://cdn1-www.dogtime.com/assets/uploads/2011/03/puppy-development.jpg",
  "https://media.spokesman.com/photos/2019/11/14/Unicorn_Puppy.JPG_Bqodudn.jpg",
  "https://www.rover.com/blog/wp-content/uploads/2018/12/golden-retriever-puppy-3843839_1920-960x540.jpg",
  "https://www.readersdigest.ca/wp-content/uploads/sites/14/2013/03/6-facts-to-know-before-owning-a-puppy.jpg",
  "https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2017/11/12193133/German-Shepherd-Puppy-Fetch.jpg",
  "https://static.scientificamerican.com/sciam/cache/file/D059BC4A-CCF3-4495-849ABBAFAED10456_source.jpg?w=590&h=800&526ED1E1-34FF-4472-B348B8B4769AB2A1",
  "https://media.daysoftheyear.com/20191118101039/puppy-day-e1574071869348-1920x580.jpg",
  "https://www.petmd.com/sites/default/files/puppy-potty-training-388719256.jpg",
  "https://www.thesprucepets.com/thmb/8G53qUpCCyOC64WS2Iu0uZ97IGc=/960x0/filters:no_upscale():max_bytes(150000):strip_icc()/puppy-looking-into-camera-83454906-5b9ae83046e0fb0025f52133.jpg",
  "https://s.abcnews.com/images/Lifestyle/puppy-ht-3-er-170907_16x9_992.jpg",
  "https://upload.wikimedia.org/wikipedia/commons/6/6e/Golde33443.jpg",
  "https://nationalpostcom.files.wordpress.com/2019/11/75362421_2572015406212746_1260297628332064768_n.jpg?quality=80&strip=all&w=780",
  "https://thehappypuppysite.com/wp-content/uploads/2018/04/when-can-puppies-go-outside-header.jpg",
  "https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg",
  "http://www.iams.com/images/default-source/article-image/article_puppy-basics-keeping-your-puppy-s-skin-and-coat-healthy_header.jpg",
  "https://compote.slate.com/images/24c26e48-a422-4843-90c3-927c3268f51e.jpg",
  "https://snworksceo.imgix.net/dtc/10ec0a64-8f9d-46d9-acee-5ef9094d229d.sized-1000x1000.jpg?w=1000",
  "https://images.unsplash.com/photo-1546238232-20216dec9f72?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1000&q=80",
  "https://parade.com/wp-content/uploads/2018/03/golden-puppy-life-national-geographic-ftr.jpg",
  "https://assets3.thrillist.com/v1/image/2754967/size/tmg-article_tall;jpeg_quality=20.jpg",
  "https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2017/11/12231413/Labrador-Retriever-MP.jpg",
  "https://www.purina.co.uk/dog/beta/sites/g/files/mcldtz631/files/2018-01/cute-jack-russell-puppy-with-red-collar-mb_0.jpg",
  "https://static.independent.co.uk/s3fs-public/thumbnails/image/2019/11/29/08/puppy.jpg?w968h681",
  "https://www.humanesociety.org/sites/default/files/styles/768x326/public/2018/07/puppy-405139.jpg?h=d7fc83e3&itok=8jqgSmmD",
  "https://cdn.royalcanin-weshare-online.io/pCJJPmYBaxEApS7LeAbn/v1/ed7h-how-to-buy-a-puppy-hero-dog",
  "https://www.cbc.ca/kidscbc2/content/the_feed//puppies-HEADER-compressor.jpg",
  "https://moderndogmagazine.com/sites/default/files/images/articles/top_images/Training-Header_0.jpg",
  "https://9ed48207422fa7fc5013-a6297eb5ec0f30e883355c8680f3b2d6.ssl.cf2.rackcdn.com/35585131450_6-20190322154216-20190322154226-1000x1000.jpg",
  "https://cdn.cnn.com/cnnnext/dam/assets/200117091801-dog-gives-birth-to-green-puppy-pkg-vpx-00001304-large-169.jpg",
  "https://thenypost.files.wordpress.com/2020/01/green-puppy-66.jpg?quality=80&strip=all&w=618&h=410&crop=1",
  "https://www.aspca.org/sites/default/files/puppylaunderingbanner.jpg",
  "https://i.ytimg.com/vi/8sUOvDzmrks/hqdefault.jpg",
  "https://www.petmd.com/sites/default/files/petmd-shaking-puppy.jpg",
  "https://static.independent.co.uk/s3fs-public/thumbnails/image/2017/07/02/17/teacup-puppy.jpg?w968h681",
  "https://spca.bc.ca/wp-content/uploads/DSC7970-e1568922693978-825x419.jpg",
  "https://cdn.cnn.com/cnnnext/dam/assets/191204034536-puppies-rescued-2-large-169.jpg",
  "https://www.hillspet.com/content/dam/cp-sites/hills/hills-pet/en_us/exported/dog-care/new-pet-parent/images/puppy-retriever-scratching.jpg",
  "https://freshpet.com/wp-content/uploads/2018/01/puppy_party_freshpet.jpg",
  "https://penntoday.upenn.edu/sites/default/files/2019-07/Casey%20running%20crop.jpg",
  "https://vetstreet-brightspot.s3.amazonaws.com/da/5a/a038b1d94ede931d0fa8f8618f77/socialized-puppy-thinkstock-158913287-335sm12313.jpg",
  "https://www.preventivevet.com/hs-fs/hubfs/black%20lab%20puppy%20sad.jpg?width=350&name=black%20lab%20puppy%20sad.jpg",
  "https://thehappypuppysite.com/wp-content/uploads/2018/07/what-do-i-need-for-a-puppy-header.jpg",
  "https://postmediaedmontonjournal2.files.wordpress.com/2019/09/0928-you-martin-e1569519642303.jpg?quality=80&strip=all&w=371&h=277&crop=1",
  "https://i.guim.co.uk/img/media/fe1e34da640c5c56ed16f76ce6f994fa9343d09d/0_174_3408_2046/master/3408.jpg?width=300&quality=85&auto=format&fit=max&s=80a280664b70fa77e4bcb4cde3caf273",
  "http://pupsterpassion.com/wp-content/uploads/2019/10/cute-puppy.png",
  "https://www.sciencealert.com/images/2019-11/processed/5dcc417e79d7570dff18df74_600.jpg",
  "https://t7-live-ahsd8.nyc3.cdn.digitaloceanspaces.com/animalhumanesociety.org/files/media/image/2019-05/Puppy.jpg",
  "https://assets.reviews.com/uploads/2018/07/10050434/Featured-Image-for-Puppies-900x585.jpg",
  "https://i.insider.com/5ddcfba779d75702a558b175?width=1100&format=jpeg&auto=webp",
  "https://cdn.shopify.com/s/files/1/1362/5949/articles/1-furbo-feature_1000x.jpg?v=1563392943",
  "https://www.hillspet.com/content/dam/cp-sites/hills/hills-pet/en_us/img/article/golden-retriever-puppy-in-red-collar.jpg",
  "https://www.designboom.com/wp-content/uploads/2019/12/puppy-daycare-center-south-korea-designboom-600.jpg",
  "https://assets3.thrillist.com/v1/image/2799859/size/tmg-article_default_mobile.jpg",
  "https://www.sciencemag.org/sites/default/files/styles/inline__450w__no_aspect/public/pearl_16x9.jpg?itok=Tq-dVV3X",
  "https://www.purina.ca/sites/g/files/auxxlc601/files/styles/kraken_generic_max_width_360/public/purina-puppy-eat-adult-dog-food_1200x500.png?itok=epOGPhTT",
  "https://img.buzzfeed.com/buzzfeed-static/static/2019-11/14/15/asset/cc71a8fc7abf/sub-buzz-116-1573747008-1.jpg?downsize=700%3A%2A&output-quality=auto&output-format=auto&output-quality=auto&output-format=auto&downsize=360:*",
  "https://www.cp24.com/polopoly_fs/1.4740003.1576941185!/httpImage/image.jpg_gen/derivatives/landscape_620/image.jpg",
  "https://www.bil-jac.com/media/ww5kq5u4/puppy.jpg?anchor=center&mode=crop&width=1024&height=512",
  "https://thumbs-prod.si-cdn.com/v-ISZMNaY63vohRiHAYUbRXP8To=/420x240/https://public-media.si-cdn.com/filer/22/72/22724e42-e86d-4141-8f66-cb0b5e11b8c1/puppy.jpg",
  "https://vcahospitals.com/-/media/vca/images/lifelearn-images/puppy_chewing.png?la=en&hash=5BAFE68BD6B80FC6AD311D157C6B6486",
  "https://i2.wp.com/metro.co.uk/wp-content/uploads/2019/10/PRI_92189411.jpg?quality=90&strip=all&zoom=1&resize=644%2C322&ssl=1",
  "https://www.wthr.com/sites/default/files/styles/article_image/public/2019/11/23/day_dog-adopts-puppies_via-kare_970.jpg?itok=llrS_fTF",
  "https://s.abcnews.com/images/US/narwhalpuppy_hpMain_16x9_992.jpg",
  "https://cdn.psychologytoday.com/sites/default/files/styles/article-inline-half/public/field_blog_entry_images/2018-03/puppy-tips.jpg?itok=dp_MoapS",
  "https://i.guim.co.uk/img/media/f5a4f2c5609a3dc8de1d264d639904d1032d52c3/0_31_3725_2235/master/3725.jpg?width=300&quality=85&auto=format&fit=max&s=4ec83ebbd88933d35b5e1984e086394c",
  "https://www.washingtonpost.com/wp-apps/imrs.php?src=https://arc-anglerfish-washpost-prod-washpost.s3.amazonaws.com/public/BQRPP7J4D5FLDBA5EN4Q7YBIJA.jpeg&w=767",
  "https://cdn.theatlantic.com/assets/media/img/photo/2019/03/national-puppy-day-photos/p15_1335849737/main_900.jpg?1553363469",
  "https://cnet2.cbsistatic.com/img/0xX7iXXlhdWLV0VQdL6O2p89JnU=/2020/01/16/f0436ac4-a088-4b60-973e-324da6885386/puppy.jpg",
  "https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Cara_de_quem_caiu_do_caminh%C3%A3o..._%28cropped%29.jpg/220px-Cara_de_quem_caiu_do_caminh%C3%A3o..._%28cropped%29.jpg",
  "https://media.spokesman.com/photos/2019/04/25/Puppy1.jpg",
  "https://cdn.abcotvs.com/dip/images/5745299_121019-kgo-papo-stolen-puppy-img_Image_00-01-45,12.jpg?w=800&r=16%3A9",
  "https://www.ft.com/__origami/service/image/v2/images/raw/http%3A%2F%2Fcom.ft.imagepublish.upp-prod-us.s3.amazonaws.com%2F930ad06a-f640-11e9-a79c-bc9acae3b654?fit=scale-down&source=next&width=700",
  "http://trupanion.com/blog/wp-content/uploads/2017/08/bundle-of-puppies-resized.jpg",
  "https://www.vippetcare.com/wp-content/uploads/2019/02/Screen-Shot-2019-02-20-at-5.03.07-PM.png",
  "http://www.cochranehumane.ca/wp-content/uploads/2020/01/puppy-play-group_jan2019-768x582.jpg",
  "https://www.pedigree.com/images/default-source/article-images/puppy-starter-kit2.tmb-header-sm.jpg?sfvrsn=368a6149_1",
  "https://noahsarkvet.com/wp-content/uploads/2017/10/7-Tips-for-Using-Training-Pads-for-Puppies.jpg",
  "https://hips.hearstapps.com/ghk.h-cdn.co/assets/17/30/2560x1280/landscape-1500925839-golden-retriever-puppy.jpg?resize=480:*",
  "https://images2.minutemediacdn.com/image/upload/c_crop,h_1065,w_1900,x_0,y_112/f_auto,q_auto,w_1100/v1565050342/shape/mentalfloss/594059-heartsbonesrescue.jpg",
  "https://komonews.com/resources/media/e48bee4d-d461-4ec3-9fb1-346e0cebd1ed-large16x9_Logan_32.jpg?1547524157459",
  "https://media.nbclosangeles.com/2019/09/dog-wheel-tire-riverside-county-coachella-january-23-2020.jpg?resize=850%2C478",
  "https://vetstreet-brightspot.s3.amazonaws.com/55/77/a059e49243609b3d7cf69a45a302/puppy-thinkstock-173329848-335sm71913.jpg",
  "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/month-pure-breed-beagle-puppy-on-gray-screen-royalty-free-image-865226542-1566913909.jpg",
  "https://images.pexels.com/photos/39317/chihuahua-dog-puppy-cute-39317.jpeg?auto=compress&cs=tinysrgb&dpr=1&w=500",
  "https://miro.medium.com/max/5476/0*fB5U5jNoPvr7xwko",
  "https://bullyade.com/wp-content/uploads/2019/07/best-vitamins-for-puppies-750x350.jpg",
  "https://loveandkissespetsitting.net/wp-content/uploads/2018/01/Depositphotos_25667991_xs-1.jpg",
  "https://www.dw.com/image/49202627_303.jpg",
  "https://scx1.b-cdn.net/csz/news/800/2020/scientistsun.jpg",
  "https://www.gannett-cdn.com/presto/2019/12/18/USAT/5c51582a-64cb-4079-8584-b7bdf9dae701-GettyImages-1130714351.jpg",
  "https://www.wmbfnews.com/resizer/5S2bT0AZf_C_T4Mur413IbPowEo=/1200x600/arc-anglerfish-arc2-prod-raycom.s3.amazonaws.com/public/33LTQMXVFBBKTLDGQUZEOYFJYQ.PNG",
  "https://www.caninefitness.com/images/rottweiler-puppies.jpg",
  "https://static.nationalgeographic.co.uk/files/styles/image_1900/public/01-puppy-peak-cuteness-NationalGeographic_2283134.jpg",
]
`;

exports[`image search parse matches snapshots from fixture data: 03-puppy2.html 1`] = `
Array [
  "https://cdn3-www.dogtime.com/assets/uploads/2018/10/puppies-cover.jpg",
  "https://i.ytimg.com/vi/AZ2ZPmEfjvU/maxresdefault.jpg",
  "https://www.thesprucepets.com/thmb/lS8_qgfJ-9WYm9gKUzrKj27zxAE\\\\u003d/4427x2490/smart/filters:no_upscale()/portrait-of-a-terrier-puppy-dog-771456683-5b9adade4cedfd005049c4af.jpg",
  "https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2018/05/22224952/beagle-puppy-in-large-cushion-chair.jpg",
  "https://www.petmd.com/sites/default/files/petmd-puppy-weight.jpg",
  "https://cdn.aarp.net/content/dam/aarp/money/scams_fraud/2019/12/1140-puppy-sad.jpg",
  "https://d17fnq9dkz9hgj.cloudfront.net/uploads/2018/01/shutterstock_587562362.jpg",
  "https://cdn1-www.dogtime.com/assets/uploads/2011/03/puppy-development.jpg",
  "https://media.spokesman.com/photos/2019/11/14/Unicorn_Puppy.JPG_Bqodudn.jpg",
  "https://www.readersdigest.ca/wp-content/uploads/sites/14/2013/03/6-facts-to-know-before-owning-a-puppy.jpg",
  "https://www.rover.com/blog/wp-content/uploads/2018/12/golden-retriever-puppy-3843839_1920-960x540.jpg",
  "https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2017/11/12193133/German-Shepherd-Puppy-Fetch.jpg",
  "https://media.daysoftheyear.com/20191118101039/puppy-day-e1574071869348-1920x580.jpg",
  "https://upload.wikimedia.org/wikipedia/commons/6/6e/Golde33443.jpg",
  "https://www.thesprucepets.com/thmb/8G53qUpCCyOC64WS2Iu0uZ97IGc\\\\u003d/960x0/filters:no_upscale():max_bytes(150000):strip_icc()/puppy-looking-into-camera-83454906-5b9ae83046e0fb0025f52133.jpg",
  "https://www.petmd.com/sites/default/files/puppy-potty-training-388719256.jpg",
  "https://s.abcnews.com/images/Lifestyle/puppy-ht-3-er-170907_16x9_992.jpg",
  "https://thehappypuppysite.com/wp-content/uploads/2018/04/when-can-puppies-go-outside-header.jpg",
  "https://live.staticflickr.com/4112/5170590074_714d36db83_b.jpg",
  "https://compote.slate.com/images/24c26e48-a422-4843-90c3-927c3268f51e.jpg",
  "http://www.iams.com/images/default-source/article-image/article_puppy-basics-keeping-your-puppy-s-skin-and-coat-healthy_header.jpg",
  "https://parade.com/wp-content/uploads/2018/03/golden-puppy-life-national-geographic-ftr.jpg",
  "https://assets3.thrillist.com/v1/image/2754967/size/tmg-article_tall;jpeg_quality\\\\u003d20.jpg",
  "https://s3.amazonaws.com/cdn-origin-etr.akc.org/wp-content/uploads/2017/11/12231413/Labrador-Retriever-MP.jpg",
  "https://www.purina.co.uk/dog/beta/sites/g/files/mcldtz631/files/2018-01/cute-jack-russell-puppy-with-red-collar-mb_0.jpg",
  "https://moderndogmagazine.com/sites/default/files/images/articles/top_images/Training-Header_0.jpg",
  "https://9ed48207422fa7fc5013-a6297eb5ec0f30e883355c8680f3b2d6.ssl.cf2.rackcdn.com/35585131450_6-20190322154216-20190322154226-1000x1000.jpg",
  "https://cdn.cnn.com/cnnnext/dam/assets/200117091801-dog-gives-birth-to-green-puppy-pkg-vpx-00001304-large-169.jpg",
  "https://images2.minutemediacdn.com/image/upload/c_crop,h_1065,w_1900,x_0,y_112/f_auto,q_auto,w_1100/v1565050342/shape/mentalfloss/594059-heartsbonesrescue.jpg",
  "https://www.aspca.org/sites/default/files/puppylaunderingbanner.jpg",
  "https://www.cbc.ca/kidscbc2/content/the_feed//puppies-HEADER-compressor.jpg",
  "https://i.ytimg.com/vi/8sUOvDzmrks/hqdefault.jpg",
  "https://spca.bc.ca/wp-content/uploads/DSC7970-e1568922693978-825x419.jpg",
  "https://freshpet.com/wp-content/uploads/2018/01/puppy_party_freshpet.jpg",
  "https://www.petmd.com/sites/default/files/petmd-shaking-puppy.jpg",
  "https://cdn.cnn.com/cnnnext/dam/assets/191204034536-puppies-rescued-2-large-169.jpg",
  "https://www.hillspet.com/content/dam/cp-sites/hills/hills-pet/en_us/exported/dog-care/new-pet-parent/images/puppy-retriever-scratching.jpg",
  "https://penntoday.upenn.edu/sites/default/files/2019-07/Casey%20running%20crop.jpg",
  "https://vetstreet-brightspot.s3.amazonaws.com/da/5a/a038b1d94ede931d0fa8f8618f77/socialized-puppy-thinkstock-158913287-335sm12313.jpg",
  "https://assets.reviews.com/uploads/2018/07/10050434/Featured-Image-for-Puppies-900x585.jpg",
  "https://www.preventivevet.com/hs-fs/hubfs/black%20lab%20puppy%20sad.jpg?width\\\\u003d350\\\\u0026name\\\\u003dblack%20lab%20puppy%20sad.jpg",
  "http://pupsterpassion.com/wp-content/uploads/2019/10/cute-puppy.png",
  "https://www.sciencealert.com/images/2019-11/processed/5dcc417e79d7570dff18df74_600.jpg",
  "https://www.hillspet.com/content/dam/cp-sites/hills/hills-pet/en_us/img/article/golden-retriever-puppy-in-red-collar.jpg",
  "https://t7-live-ahsd8.nyc3.cdn.digitaloceanspaces.com/animalhumanesociety.org/files/media/image/2019-05/Puppy.jpg",
  "https://www.cp24.com/polopoly_fs/1.4740003.1576941185!/httpImage/image.jpg_gen/derivatives/landscape_620/image.jpg",
  "https://thumbs-prod.si-cdn.com/v-ISZMNaY63vohRiHAYUbRXP8To\\\\u003d/420x240/https://public-media.si-cdn.com/filer/22/72/22724e42-e86d-4141-8f66-cb0b5e11b8c1/puppy.jpg",
  "https://www.designboom.com/wp-content/uploads/2019/12/puppy-daycare-center-south-korea-designboom-600.jpg",
  "https://media.spokesman.com/photos/2019/04/25/Puppy1.jpg",
  "https://assets3.thrillist.com/v1/image/2799859/size/tmg-article_default_mobile.jpg",
  "https://s.abcnews.com/images/US/narwhalpuppy_hpMain_16x9_992.jpg",
  "https://cnet2.cbsistatic.com/img/0xX7iXXlhdWLV0VQdL6O2p89JnU\\\\u003d/2020/01/16/f0436ac4-a088-4b60-973e-324da6885386/puppy.jpg",
  "https://upload.wikimedia.org/wikipedia/commons/thumb/a/af/Cara_de_quem_caiu_do_caminh%C3%A3o..._%28cropped%29.jpg/220px-Cara_de_quem_caiu_do_caminh%C3%A3o..._%28cropped%29.jpg",
  "https://www.vippetcare.com/wp-content/uploads/2019/02/Screen-Shot-2019-02-20-at-5.03.07-PM.png",
  "http://trupanion.com/blog/wp-content/uploads/2017/08/bundle-of-puppies-resized.jpg",
  "https://hips.hearstapps.com/hmg-prod.s3.amazonaws.com/images/month-pure-breed-beagle-puppy-on-gray-screen-royalty-free-image-865226542-1566913909.jpg",
  "https://www.readersdigest.ca/wp-content/uploads/sites/14/2013/03/owning-a-puppy-means-more-patience.jpg",
  "https://bullyade.com/wp-content/uploads/2019/07/best-vitamins-for-puppies-750x350.jpg",
  "https://vetstreet-brightspot.s3.amazonaws.com/55/77/a059e49243609b3d7cf69a45a302/puppy-thinkstock-173329848-335sm71913.jpg",
  "https://loveandkissespetsitting.net/wp-content/uploads/2018/01/Depositphotos_25667991_xs-1.jpg",
  "https://www.dw.com/image/49202627_303.jpg",
  "https://www.thefarmersdog.com/digest/wp-content/uploads/2019/10/austin-kirk-QZenflkkwt0-unsplash.jpg",
  "https://www.gannett-cdn.com/presto/2019/12/18/USAT/5c51582a-64cb-4079-8584-b7bdf9dae701-GettyImages-1130714351.jpg",
  "https://static.nationalgeographic.co.uk/files/styles/image_1900/public/01-puppy-peak-cuteness-NationalGeographic_2283134.jpg",
  "https://www.caninefitness.com/images/rottweiler-puppies.jpg",
]
`;
